--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.20.13",
     "@types/react": "^16.14.8",
     "@types/react-dom": "^16.9.13",
+    "date-fns": "^2.22.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
