--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.14.8",
     "@types/react-dom": "^16.9.13",
     "date-fns": "^2.22.1",
+    "fake-indexeddb": "^3.1.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
