--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/dexie": "^1.3.1",
     "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.170",
     "@types/node": "^12.20.13",
     "@types/react": "^16.14.8",
     "@types/react-dom": "^16.9.13",
     "date-fns": "^2.22.1",
+    "dexie": "^3.0.3",
     "fake-indexeddb": "^3.1.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
