--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.23",
+    "@types/json-logic-js": "^1.2.1",
     "@types/lodash": "^4.14.170",
     "@types/node": "^12.20.13",
     "@types/react": "^16.14.8",
@@ -14,6 +15,7 @@
     "date-fns": "^2.22.1",
     "dexie": "^3.0.3",
     "fake-indexeddb": "^3.1.2",
+    "json-logic-js": "^2.0.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
