--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.20.13",
     "@types/react": "^16.14.8",
     "@types/react-dom": "^16.9.13",
+    "comlink": "^4.3.1",
     "date-fns": "^2.22.1",
     "dexie": "^3.0.3",
     "fake-indexeddb": "^3.1.2",
