--- a/package.json
+++ b/package.json
@@ -74,12 +74,14 @@
     "@typescript-eslint/parser": "^4.25.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "*",
+    "css-loader": "^5.2.6",
     "eslint": "^7.27.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-webpack-plugin": "^2.5.4",
     "fork-ts-checker-webpack-plugin": "^6.2.10",
     "html-webpack-plugin": "^5.3.1",
+    "style-loader": "^2.0.0",
     "ts-node": "^10.0.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
