--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.20.13",
     "@types/react": "^16.14.8",
     "@types/react-dom": "^16.9.13",
+    "@types/react-query": "^1.2.9",
     "comlink": "^4.3.1",
     "date-fns": "^2.22.1",
     "dexie": "^3.0.3",
@@ -20,6 +21,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.16.0",
     "typescript": "^4.3.2",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
