--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,8 @@
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "@typescript-eslint/explicit-function-return-type": "off"
   },
   "settings": {
     "react": {
